example/lib/src/arbs/errors/app_hu.arb
{
  "@@locale": "hu",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "Hiba történt",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Váratlan hiba történt",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "A hibajelentés sikeresen elküldve.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}